# SDL_bgi

./: .gitignore  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  INSTALL_Emscripten.md  INSTALL_GNU-Linux.md  INSTALL_Python.md  INSTALL_Windows.md  INSTALL_macOS.md  LICENSE  README.md  TODO  mkpkg.sh  sdl_bgi.spec
demo/: .gitignore  Makefile  Makefile.emcc  README.md  boo.c  boo.py  buffers.c  buffers.py  buffers_numpy.py  cellular.c  cellular.py  dla.c  dla.py  dos.h  emcc.sh  fern.c  fern.py  floodfilltest.c  floodfilltest.py  fonts.c  fonts.py  hopalong.c  hopalong.py  kaleido.c  kaleido.py  life.c  life.py  linebuffers.c  linebuffers.py  loadimage.c  mandelbrot.c  mandelbrot.py  minimal.c  minimal.py  mousetest.c  mousetest.py  multiwin.c  multiwin.py  pages.c  pages.py  (+14 more)
doc/: Makefile  README.md  compatibility.html  compatibility.md  fonts.html  fonts.md  functions.html  functions.md  graphics.3.md  howto_AppImage.html  howto_AppImage.md  howto_CodeBlocks.html  howto_CodeBlocks.md  howto_Dev-Cpp.html  howto_Dev-Cpp.md  howto_Emscripten.html  howto_Emscripten.md  howto_Python.html  howto_Python.md  sdl_bgi-quickref.tex  turtlegraphics.tex  using.html  using.md
pypi/: LICENSE  README.md  pyproject.toml
pypi/src/sdl_bgi/: __init__.py  sdl_bgi.py
pypi/test/: boo.py  buffers.py  buffers_numpy.py  cellular.py  dla.py  fern.py  floodfilltest.py  fonts.py  hopalong.py  kaleido.py  life.py  linebuffers.py  mandelbrot.py  minimal.py  mousetest.py  multiwin.py  pdj.py  plasma.py  psychedelia.py  rgbpalette.py  simple.py
src/: Makefile  Makefile.CodeBlocks  Makefile.DevCpp  (+13 more)
(+94 files in other folders)
